styles.css
body {
    display: flex;
    flex-direction: column;
    justify-content: space-between;
    font-family: Roboto, Arial, Helvetica, sans-serif;
    margin: 0;
}

.background-container {
    background-color: #1F2937;
    display: flex;
    flex-direction: column;
    padding: 0 96px;
}

.header,
.landing {
    color: #F9FAF8;
}

.header {
    display: flex;
    align-items: center;
    justify-content: space-between;
    padding: 16px;
    margin: 0;
}

.title {
    font-size: 24px;
    font-weight: bold;
}

.landing {
    display: flex;
    flex: 1;
    align-items: center;
    justify-content: space-between;
    padding: 16px;
    margin: 48px 0; 
}

.landing-title {
    font-size: 48px;
    font-weight: 900;
}

.landing-right {
    margin-left: 120px;
}

.landing .text {
    color: #E5E7EB;
    font-size: 18px;
}

button {
    color: white;
    background-color: #3882F6;
    font-size: 16px;
    border-radius: 10%;
    padding: 10px;
}

.information {
    text-align: center;
    margin-top: 48px;
    font-size: 36px;
    font-weight: 900;
    color: #1F2937;
}

.directory {
    display: flex;
    justify-content: center;
    gap: 30px;
    margin: 32px;
}

.directory-image {
    border-radius: 10%;
    border-style: solid;
    border-width: 3px;
    border-color: #3882F6;
    width: 150px;
    height: 150px;
}

.directory .text {
    margin-top: 20px;
    color: #3A3B3C;
    font-size: 16px;
}

.img-container {
    display: flex;
    flex-direction: column;
    align-items: center;
    flex-basis: 200px;
}

.grey-space {
    text-align: right;
    background-color: #E5E7EB;
    padding: 72px 48px;
    color: #1F2937;
}

#quote {
    font-size: 36px;
    font-weight: 300;
    font-style: italic;
    margin-bottom: 20px;
}

#attribute {
    font-weight: 800;
}

.footer {
    display: flex;
    justify-content: center;
    align-items: center;
    margin-top: auto;
}

ul {
    list-style-type: none;
    display: flex;
    gap: 16px;
    margin: 0;
    padding: 0;
  }
  
a {
    text-decoration: none;
    /* color: white;
    font-size: 24px; */
  }

